--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="">Nabídka</a></li>
             <li><a href="">Kontakt</a></li>
-            <li><a href="">O nás</a></li>
+            <li><a href="onas.html">O nás</a></li>
         </ul>
 
     </div>
@@ -118,6 +118,7 @@
                 <a href="https://www.instagram.com/vinoteka_za_obecnakem/" class="fa fa-instagram" target="_blank"></a>
             </div>
         </footer>
+    </div>
 
 
     
