--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a>
 
         <ul>
-            <li><a href="">Nabídka</a></li>
+            <li><a href="nabidka.html">Nabídka</a></li>
             <li><a href="limitka.html">Limitovaná edice</a></li>
             <li><a href="onas.html">O nás</a></li>
         </ul>
