--- a/limitka.html
+++ b/limitka.html
@@ -25,28 +25,42 @@
         </a>
 
         <ul>
-            <li><a href="">Nabídka</a></li>
+            <li><a href="nabidka.html">Nabídka</a></li>
             <li><a href="limitka.html">Limitovaná edice</a></li>
             <li><a href="onas.html">O nás</a></li>
         </ul>
 
     </div>
 
-        <div class="kontent">
-            <div class="lokace">
-                <div class="pole">
-
-                    <p></p>
-                   
-                </div>
-
-                <div class="pole">
-                    <p></p>
-                </div>
+    <div class="kontent">
+        <div class="pole">
+            <div class="obrazek2">
+                <img  src="limitka2.jpg" alt="">
             </div>
-
-
+            <p>Cílem naší limitované edice je říct našim zákazníkům, že kvalita moderního moravského vinařství je dnes na vysoké úrovni. Každá vinařská oblast má své vinaře, kteří dělají svá vína s láskou a jak nejlépe dokážou. Podpořte naše moravské vinařské obce a jejich vinaře nákupem těchto lokálních výrobků. Pomůžete jim tak v této nelehké době udržet si svá vinařství, aby vám i nadále mohli nabízet svá vína s vůní domova.</p>
         </div>
+
+        <div class="pole">
+            <div class="obrazek3">
+                <img src="limitka3.jpg" alt="">
+            </div>
+            <p id="text2">Vždyť bez podpory vás zákazníků, by nemohla ani tak malá vinotéka, jako jsme my dokázat tak veliké věci. My jsme tu pro vás! Jsme tu proto, abychom nabídli to nejlepší z našich vinic, to nejlepší, co umíme - „ dělat úžasné víno ".</p>
+        </div>
+
+        <div class="pole">
+            <div class="obrazek4">
+                <img src="limitka4.jpg" alt="">
+            </div>
+            <p>Limitovaná edice vín r. 2023 je věnovaná malé vinařské rodině, manželům Faronovým z Vranovic. Je to poděkování za celoživotní lásku k vínu a jeho výrobě.</p>
+        </div>
+
+        <div class="pole">
+            <div class="obrazek5">
+                <img src="limitka5.jpg" alt="">
+            </div>
+            <p>Díky živé etiketě poznejte naše vinohrady, naši vinotéku. Přijďte se podívat na tradice, které mají pro nás tu největší hodnotu. Ochutnejte vína místních vinařů. Zažijete vinařskou kulturu na vlastní kůži.</p>
+        </div>
+        
 
 
 
