--- a/onas.html
+++ b/onas.html
@@ -23,7 +23,7 @@
         </a>
 
         <ul>
-            <li><a href="">Nabídka</a></li>
+            <li><a href="nabidka.html">Nabídka</a></li>
             <li><a href="limitka.html">Limitovaná edice</a></li>
             <li><a href="onas.html">O nás</a></li>
         </ul>
@@ -32,20 +32,32 @@
 
     <div class="kontent">
         <div class="pole">
+            <div class="onas1">
+                <img  src="onas1.jpg" alt="">
+            </div>
             <p>Vinotéku jsem otevřela na jaře r. 2019. Byla to náročná doba, protože chvíli před tím naplno vypukl Covid.
                 Naší hlavní nabídkou jsou vína Vranovických vinařů, která jsou uložena v našem archívním sklepě, který je součástí Vinotéky a je volně přístupný. Kromě klasických vín prodáváme oranžová, ledová nebo slámová vína. V našem zastoupení zde koupíte vína z vinařství Drahomír Dofek , Lubomír Celnar, Tomáš Měřínský a Oldřich Drápal. Z místních vinic zde můžete také ochutnat vína rozlévaná, burčák nebo svařák.
                 </p>
         </div>
 
         <div class="pole">
+            <div class="onas2">
+                <img  src="onas4.jpg" alt="">
+            </div>
             <p>Ale pojďme se vrátit na úplný začátek. Původní plán byl poněkud jiný, než v jakém režimu je dnes. Když jsem na první otevírací den koupila dort na přivítanou pro zákazníky, vůbec jsem netušila, kam tím směřuji. Dort byl vyprodaný za hodinu a lidé chtěli další. Další víkend jsem objednávku navýšila, ale bylo to stejné jako po prvé. Všechno bylo za chvíli pryč.</p>
 
         </div>
         <div class="pole">
+            <div class="onas3">
+                <img  src="onas3.jpg" alt="">
+            </div>
             <p>Moje představa vést Vinotéku byla velmi jednoduchá. Budu prostě prodávat víno, drobné občerstvení, domácí limonády a kávy. Jenže najednou mě to táhlo jinam. Začala se mi v hlavě rodit myšlenka. Po čem lidé touží? Co mají rádi?  Co chtějí ochutnat?  A tak jsem se začala zaměřovat na produkty místních farem a malých výrobců. Do naší nabídky jsem zařadila postupně klobásy, sýry, paštiky, prémiové pálenky a několik dalších farmářských produktů.</p>
         </div>
 
         <div class="pole">
+            <div class="onas4">
+                <img  src="onas2.jpg" alt="">
+            </div>
             <p>V našem prodejním koutku koupíte například keramiku, broušené sklo na víno, plecháčky a spoustu dalších dárkových předmětů. Díky uchování tradičního řemesla paní Jany Coufalové zde můžete zakoupit i dětské kroje nebo kabelky se slováckými motivy.
                 Přijměte toto jako pozvání k nám do Vinotéky a chutnejte u nás víno, chlebíčky nebo zákusek.
                 </p>
