--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinotéka za obecňákem</title>
     <link rel="stylesheet" href="styl.css"/>
-    <script src="./script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet"> 
@@ -26,7 +25,8 @@
 
         <ul>
             <li><a href="nabidka.html">Nabídka</a></li>
-            <li><a href="limitka.html">Limitovaná edice</a></li>
+            <li><a href="limitka24.html">Limitovaná edice 2024</a></li>
+            <li><a href="limitka.html">Limitovaná edice 2023</a></li>
             <li><a href="onas.html">O nás</a></li>
         </ul>
 
@@ -82,23 +82,23 @@
                         </tr>
                         <tr>
                             <td>Středa</td>
-                            <td>14:00 až 19:00</td>
+                            <td>15:00 až 19:00</td>
                         </tr>
                         <tr>
                             <td>Čtvrtek</td>
-                            <td>14:00 až 19:00</td>
+                            <td>15:00 až 19:00</td>
                         </tr>
                         <tr>
                             <td>Pátek</td>
-                            <td>14:00 až 20:00</td>
+                            <td>15:00 až 22:00</td>
                         </tr>
                         <tr>
                             <td>Sobota</td>
-                            <td>12:00 až 20:00</td>
+                            <td>14:00 až 22:00</td>
                         </tr>
                         <tr>
                             <td>Neděle</td>
-                            <td>12:00 až 19:00</td>
+                            <td>14:00 až 19:00</td>
                         </tr>
         
                     </table>
