--- a/onas.html
+++ b/onas.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinotéka za obecňákem - O nás</title>
     <link rel="stylesheet" href="styl.css"/>
-    <script src="./script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet"> 
@@ -24,7 +23,8 @@
 
         <ul>
             <li><a href="nabidka.html">Nabídka</a></li>
-            <li><a href="limitka.html">Limitovaná edice</a></li>
+            <li><a href="limitka24.html">Limitovaná edice 2024</a></li>
+            <li><a href="limitka.html">Limitovaná edice 2023</a></li>
             <li><a href="onas.html">O nás</a></li>
         </ul>
 
