--- a/limitka24.html
+++ b/limitka24.html
@@ -34,33 +34,37 @@
 
     <div class="kontent">
         <div class="pole">
-            <div class="obrazek2">
-                <img  src="limitka2.jpg" alt="">
-                
+            <div class="obrazek6" id="obr6nad">
+                <img  src="vazka_motyl_peta.jpg" alt="">
             </div>
             <br>
             <h2>Limitovaná edice vín <br> 2024</h2>
             <h3>Na křídlech . . .</h3>
             <p style="text-align: center;">Naše nová edice vín pro rok 2024 se nese na křídlech vážky a motýla.</p>
+
+            <div class="obrazek6" id="obr6pod">
+                <img  src="vazka_motyl_peta.jpg" alt="">
+            </div>
+
         </div>
         
         <div class="pole">
-            <div class="obrazek3">
-                <img src="limitka3.jpg" alt="">
+            <div class="obrazek7">
+                <img src="vazka_ruka.jpg" alt="">
             </div>
-            <p>Vážky, jejich krásné zbarvení, dokonalý zrak a neskutečné umění letu mě přímo fascinuje. Vázka je symbolem změny, světla a porozumění. Obývá dva světy. Vzduch i vodu. Dokáží žít v rovnováze.</p>
+            <p>Vážky, jejich krásné zbarvení, dokonalý zrak a neskutečné umění letu mě přímo fascinuje. Vážka je symbolem změny, světla a porozumění. Obývá dva světy. Vzduch i vodu. Dokáží žít v rovnováze.</p>
         </div>
 
         <div class="pole">
-            <div class="obrazek4">
-                <img src="limitka4.jpg" alt="">
+            <div class="obrazek8">
+                <img src="motyl_ruka.jpg" alt="">
             </div>
             <p>Motýl je pro mě symbolem krásy, barvy a elegance. Jsou to tisíce nádherně zbarvených motýlů, různých velikostí, kteří se musí prodrat k životu několika vývojovými fázemi. Při pohledu na rozkvetlou louku plnou těchto drahokamů, nejedno srdce radostí zahřeje.</p>
         </div>
 
         <div class="pole">
-            <div class="obrazek5">
-                <img src="limitka5.jpg" alt="">
+            <div class="obrazek9">
+                <img src="motyl_vazak_stul.jpg" alt="">
             </div>
             <p>Oba tito nádherní tvorové jsou nepostradatelní pro přírodu, bez které bychom ani my nepřežili.</p>
         </div>
