--- a/nabidka.html
+++ b/nabidka.html
@@ -36,6 +36,23 @@
 
         <div class="pole" id="nabidka">
             <div class="nabidka">
+                <h2>Limitovaná edice vín pro rok 2024</h2>
+                <table>
+                    <tr>
+                        <td>Pálava 2022</td>
+                        <td>220,-</td>
+                    </tr>
+                    <tr>
+                        <td>Ristreto</td>
+                        <td>49,-</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        
+        
+        <div class="pole" id="nabidka">
+            <div class="nabidka">
                 <h2>Kávička od Clooneho</h2>
                 <table>
                     <tr>
